--- a/programs/evil-marketplace-test/Cargo.toml
+++ b/programs/evil-marketplace-test/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "libreplex"
+name = "evil-marketplace-test"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "libreplex"
 
 [features]
 no-entrypoint = []
@@ -19,15 +18,10 @@ default = []
 [dependencies]
 anchor-lang = {version = "^0.27", features = ["init-if-needed"]}
 anchor-spl = "^0.27"
-spl-token = { version = "3.5.0",  features = ["no-entrypoint"] }
+spl-token-2022 = {version = "0.6.1", features = ["no-entrypoint"] }
 solana-program = "~1.14"
-winnow="=0.4.1"
-prog_common = {path='../../lib/prog_common'}
-proc_macros = {path='../../lib/proc_macros'}
-
 
 [dev-dependencies]
-spl-token-2022 = "0.6.1"
 mocha = "0.1.1"
 bincode = "1.3.3"
 assert_matches = "1.5.0"
